# language_frontend

./: \  dune-project
_build/: .db  .digest-db  log
_build/default/: language_frontend.dune-package  language_frontend.install  language_frontend.opam
_build/default/lib/: language_frontend.cma  language_frontend.cmxa  language_frontend.cmxs
_build/default/lib/.language_frontend.objs/byte/: language_frontend.cmi  language_frontend.cmo  language_frontend.cmt
_build/default/lib/.language_frontend.objs/native/: language_frontend.cmx
_build/default/lib/.merlin-conf/: lib-language_frontend
_build/default/test/.merlin-conf/: exe-test_language_frontend
_build/default/test/.test_language_frontend.eobjs/byte/: dune__exe__Test_language_frontend.cmi  dune__exe__Test_language_frontend.cmti
_build/default/test/.test_language_frontend.eobjs/native/: dune__exe__Test_language_frontend.cmx
_build/install/default/lib/language_frontend/: META  dune-package  opam
docs/: grammer_production.txt
lib/: dune
test/: dune
